app-deployment/base/chat-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-fe
  namespace: $NAMESPACE
  labels:
    app: chat-fe
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: chat-fe
  template:
    metadata:
      labels:
        app: chat-fe
    spec:
      serviceAccountName: chat-fe
      containers:
      - image: surawatprem/chat-fe:v1
        name: chat-fe
        resources:
          requests:
            cpu: "50m"
            memory: "100M"
          limits:
            cpu: "100m"
            memory: "150M"
        env: []
        ports:
        - containerPort: 80
          name: chat-fe
        volumeMounts: []
      volumes: []
      restartPolicy: Always
