app-deployment/base/chat-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-fe
spec:
  selector:
    app: chat-fe
  type: ClusterIP
  ports:
  - name: chat-fe
    protocol: TCP
    port: 80
    targetPort: 80
