app-deployment/base/chat-fe/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-fe
  namespace: non-prod
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`chat.surawattest.online`) && PathPrefix(`/chat`)
    kind: Rule
    services:
    - name: chat-fe
      port: 80
  tls:
    secretName: chat-surawattest-online
